--- a/orders.html
+++ b/orders.html
@@ -114,7 +114,7 @@
   <header class="site-header">
     <div class="container header-inner">
       <a class="brand" href="index.html" aria-label="A&J Kitchen Home">
-        <img src="images/logo.png" alt="A&J Kitchen Logo" class="brand-logo" />
+        <img src="logo.png" alt="A&J Kitchen Logo" class="brand-logo" />
         <div class="brand-text">
           <span class="brand-name">A&J Kitchen</span>
           <small class="brand-tag">Authentic Ghanaian & Continental</small>
@@ -161,7 +161,7 @@
     <div class="container footer-inner">
       <div class="footer-brand-section">
         <div class="footer-logo-wrapper">
-          <img src="images/logo.png" alt="Mama's Kitchen Logo" class="footer-logo" />
+          <img src="logo.png" alt="Mama's Kitchen Logo" class="footer-logo" />
         </div>
         <div class="footer-brand-text">
           <h3 class="footer-brand-name">
@@ -353,8 +353,8 @@
         </div>
         <div class="stat-card">
           <i class="fas fa-clock"></i>
-          <h3>${pendingOrders}</h3>
-          <p>Pending Orders</p>
+          <h3>${confirmedOrders}</h3>
+          <p>Confirmed Orders</p>
         </div>
       `;
     }
@@ -523,3 +523,4 @@
   </script>
 </body>
 </html>
+
