--- a/orders.html
+++ b/orders.html
@@ -353,8 +353,8 @@
         </div>
         <div class="stat-card">
           <i class="fas fa-clock"></i>
-          <h3>${confirmedOrders}</h3>
-          <p>Confirmed Orders</p>
+          <h3>${PendingOrders}</h3>
+          <p>Pending Orders</p>
         </div>
       `;
     }
@@ -523,4 +523,5 @@
   </script>
 </body>
 </html>
+
 
