--- a/orders.html
+++ b/orders.html
@@ -173,7 +173,7 @@
             <a href="https://www.facebook.com/profile.php?id=61584009397666" class="social-icon" aria-label="Follow on Facebook">
               <i class="fab fa-facebook-f"></i>
             </a>
-            <a href="#" class="social-icon" aria-label="Follow on TikTok">
+            <a href="http://tiktok.com/@ajchopbar" class="social-icon" aria-label="Follow on TikTok">
               <i class="fab fa-tiktok"></i>
             </a>
             <a href="tel:+233594469283" class="social-icon" aria-label="Chat on WhatsApp">
@@ -523,6 +523,7 @@
   </script>
 </body>
 </html>
+
 
 
 
